Address PR comments

--- a/deploy/1_Presto_to_VertexAI.ipynb
+++ b/deploy/1_Presto_to_VertexAI.ipynb
@@ -8,7 +8,7 @@
       "source": [
         "# 1. Presto to Vertex AI\n",
         "\n",
-        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/nasaharvest/presto/blob/initial-deploy-code/deploy/1_Presto_to_VertexAI.ipynb\">\n",
+        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/nasaharvest/presto/blob/main/deploy/1_Presto_to_VertexAI.ipynb\">\n",
         "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
         "</a>\n",
         "\n",
@@ -157,11 +157,11 @@
       "source": [
         "# Construct input manually\n",
         "batch_size = 256\n",
-        "\n",
-        "X_tensor = torch.zeros([batch_size, 12, 17])\n",
+        "NUM_TIMESTEPS = 12\n",
+        "X_tensor = torch.zeros([batch_size, NUM_TIMESTEPS, 17])\n",
         "latlons_tensor = torch.zeros([batch_size, 2])\n",
         "\n",
-        "dw_empty = torch.full([batch_size, 12], 9, device=device).long()\n",
+        "dw_empty = torch.full([batch_size, NUM_TIMESTEPS], 9, device=device).long()\n",
         "month_tensor = torch.full([batch_size], 1, device=device)\n",
         "\n",
         "# [0   1   2   3   4   5   6   7   8   9    10   11   12    13      14    16     17  ]\n",
@@ -269,6 +269,7 @@
         "    # Prepends HANDLER to each print statement to make it easier to find in logs.\n",
         "    print(f\"HANDLER {VERSION}: {text}\")\n",
         "\n",
+        "# Custom TorchServe handler for the Presto model\n",
         "class ClassifierHandler(BaseHandler):\n",
         "\n",
         "    def inference(self, data):\n",
@@ -509,7 +510,9 @@
       "source": [
         "### 5c. Deploy model to endpoint\n",
         "> Deploying a model associates physical resources with the model so that it can serve online predictions with low latency.\n",
-        "https://cloud.google.com/vertex-ai/docs/general/deployment"
+        "https://cloud.google.com/vertex-ai/docs/general/deployment\n",
+        "\n",
+        "⚠️ The `Minimum Replica Count` represents the minimum amount of compute nodes started when a model is deployed is e2-standard-2 machine (\\$0.0771/node hour in us-central-1). So as long as the endpoint is active you will be paying \\$0.0771/hour even if no predictions are made."
       ]
     },
     {
